--- a/bundle.yml
+++ b/bundle.yml
@@ -72,6 +72,8 @@ options :
             ENABLE_CLOUDSC_GPU_OMP_SCC=ON
             ENABLE_CLOUDSC_GPU_OMP_SCC_HOIST=ON
             ENABLE_CLOUDSC_GPU_OMP_SCC_K_CACHING=ON
+            ENABLE_CLOUDSC_GPU_OMP_SCC_DR_LOOP=ON
+            ENABLE_CLOUDSC_GPU_OMP_SCC_K_CACHING_DR_LOOP=ON
 
     - with-cuda :
         help  : Enable GPU kernel variant based on CUDA-Fortran
