--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,13 +6,14 @@
 # granted to it by virtue of its status as an intergovernmental organisation
 # nor does it submit to any jurisdiction.
 
-add_subdirectory(prototype1)
+# add_subdirectory(prototype1)
 add_subdirectory(common)
-add_subdirectory(cloudsc_fortran)
+# add_subdirectory(cloudsc_fortran)
 add_subdirectory(cloudsc_pyiface)
 add_subdirectory(cloudsc_python)
-add_subdirectory(cloudsc_c)
+# add_subdirectory(cloudsc_c)
 add_subdirectory(cloudsc_cuda)
 add_subdirectory(cloudsc_hip)
+add_subdirectory(cloudsc_omp_hip)
 add_subdirectory(cloudsc_gpu)
 add_subdirectory(cloudsc_loki)
