--- a/src/cloudsc_omp_hip/CMakeLists.txt
+++ b/src/cloudsc_omp_hip/CMakeLists.txt
@@ -23,47 +23,91 @@ if( HAVE_CLOUDSC_OMP_HIP )
       endif()
     endif()
 
+    enable_language(HIP)
     find_package(hip REQUIRED)
 
-    set(CMAKE_C_COMPILER "${ROCM_PATH}/bin/hipcc")
-    set(CMAKE_CXX_COMPILER "${ROCM_PATH}/bin/hipcc")
-    # set(CMAKE_HIP_FLAGS "${CMAKE_HIP_FLAGS} -03 -ffast-math")
+    # set(CMAKE_C_COMPILER "${ROCM_PATH}/bin/hipcc")
+    # set(CMAKE_CXX_COMPILER "${ROCM_PATH}/bin/hipcc")
+    set(CMAKE_HIP_FLAGS "${CMAKE_HIP_FLAGS} -v -O3 -ffast-math")
 
     ###### SCC-HIP ####
+
+    # cloudsc_c_k_caching.cpp  cloudsc_c_k_caching_mod.F90  CMakeLists.txt	     load_state.backup	load_state.h
+    # cloudsc_c_k_caching.h	 cloudsc_driver_mod.F90       dwarf_cloudsc_gpu.F90  load_state.cpp	yoecldp_c.h
+
     ecbuild_add_library(
-        TARGET dwarf-cloudsc-hip-lib
-    	INSTALL_HEADERS LISTED
-        SOURCES
-    	    cloudsc/yoecldp_c.h
-    	    cloudsc/load_state.h
-            cloudsc/load_state.cpp
-            cloudsc/cloudsc_c.h
-            cloudsc/cloudsc_c.cpp
-            cloudsc/cloudsc_driver.h
-            cloudsc/cloudsc_driver.cpp
-            cloudsc/cloudsc_validate.h
-            cloudsc/cloudsc_validate.cpp
-            cloudsc/mycpu.h
-            cloudsc/mycpu.cpp
-        PUBLIC_INCLUDES
-            $<INSTALL_INTERFACE:include>
-            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cloudsc>
-        PUBLIC_LIBS
-    	    hip::device
-            Serialbox::Serialbox_C
-            $<${HAVE_OMP}:OpenMP::OpenMP_C>
+	    TARGET dwarf-cloudsc-hip-lib
+	    INSTALL_HEADERS LISTED
+	    SOURCES
+	        load_state.h
+		load_state.cpp
+		yoecldp_c.h
+		# cloudsc_c_k_caching.h
+		cloudsc_c_k_caching.cpp
+		cloudsc_c_k_caching_mod.F90
+		# cloudsc_driver_mod.F90
+	    PUBLIC_INCLUDES
+	    	$<INSTALL_INTERFACE:include>
+            	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>
+	    PUBLIC_LIBS
+	        cloudsc-common-lib
+                hip::device
+		Serialbox::Serialbox_C
+		$<${HAVE_OMP}:OpenMP::OpenMP_C>
+		OpenMP::OpenMP_Fortran
     )
 
-    target_include_directories(dwarf-cloudsc-hip-lib PUBLIC $<INSTALL_INTERFACE:include> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cloudsc>)
-    target_link_libraries(dwarf-cloudsc-hip-lib PUBLIC hip::device Serialbox::Serialbox_C $<${HAVE_OMP}:OpenMP::OpenMP_C>)
+    set_source_files_properties(cloudsc_c_k_caching.cpp PROPERTIES LANGUAGE HIP)
+    set_target_properties(dwarf-cloudsc-hip-lib PROPERTIES LINKER_LANGUAGE Fortran)
+
+    # ecbuild_add_library(
+    #     TARGET dwarf-cloudsc-hip-lib
+    # 	INSTALL_HEADERS LISTED
+    #     SOURCES
+    # 	    cloudsc/yoecldp_c.h
+    # 	    cloudsc/load_state.h
+    #         cloudsc/load_state.cpp
+    #         cloudsc/cloudsc_c.h
+    #         cloudsc/cloudsc_c.cpp
+    #         cloudsc/cloudsc_driver.h
+    #         cloudsc/cloudsc_driver.cpp
+    #         cloudsc/cloudsc_validate.h
+    #         cloudsc/cloudsc_validate.cpp
+    #         cloudsc/mycpu.h
+    #         cloudsc/mycpu.cpp
+    #     PUBLIC_INCLUDES
+    #         $<INSTALL_INTERFACE:include>
+    #         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cloudsc>
+    #     PUBLIC_LIBS
+    # 	    hip::device
+    #         Serialbox::Serialbox_C
+    #         $<${HAVE_OMP}:OpenMP::OpenMP_C>
+    # )
+
+    target_include_directories(dwarf-cloudsc-hip-lib PUBLIC $<INSTALL_INTERFACE:include> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
+    # target_link_libraries(dwarf-cloudsc-hip-lib PUBLIC hip::device Serialbox::Serialbox_C $<${HAVE_OMP}:OpenMP::OpenMP_C>)
 
     target_compile_options(dwarf-cloudsc-hip-lib PRIVATE --offload-arch=gfx90a)
     
     ecbuild_add_executable(
-        TARGET  dwarf-cloudsc-hip
-        SOURCES dwarf_cloudsc.cpp
+        TARGET  dwarf-cloudsc-omp-hip
+	SOURCES dwarf_cloudsc_gpu.F90 cloudsc_driver_mod.F90
         LIBS dwarf-cloudsc-hip-lib
     )
+
+    set_target_properties(dwarf-cloudsc-omp-hip PROPERTIES LINKER_LANGUAGE Fortran)
+
+   # add_library(phys-hip-lib phys_hip_mod.F90 phys_hip.cpp)
+   # set_source_files_properties(phys_hip.cpp PROPERTIES LANGUAGE HIP)
+   # target_link_libraries(phys-hip-lib PRIVATE hip::device OpenMP::OpenMP_Fortran)
+   # target_compile_options(phys-hip-lib PRIVATE "-fopenmp")
+   # target_compile_options(phys-hip-lib PRIVATE "--offload-arch=gfx90a") #  -x hip")
+   # add_executable( phys_LITE_LOOP_hip phys_mod.F90 phys_driver.F90 )
+   # target_link_libraries(phys_LITE_LOOP_hip PRIVATE phys-hip-lib OpenMP::OpenMP_Fortran hip::device hip::host)
+   # target_compile_options(phys_LITE_LOOP_hip PRIVATE "-homp") # -x hip
+   # target_compile_definitions(phys_LITE_LOOP_hip PRIVATE HIP_OMP OpenMP::OpenMP_Fortran)
+   # # target_link_options(phys_LITE_LOOP_hip PRIVATE "-x hip")
+   # set_target_properties(phys_LITE_LOOP_hip PROPERTIES LINKER_LANGUAGE Fortran)
 
     
     # Create symlink for the input data
