Regression tested without packed storage on new FIELD_API

--- a/bundle.yml
+++ b/bundle.yml
@@ -69,14 +69,13 @@ projects :
             ATLAS_ENABLE_CUDA=OFF
 
     - field_api :
-        git     : ${BITBUCKET}/rdx/field_api
-        version : master
+        git     : https://github.com/ecmwf-ifs/field_api.git
+        version : main
         optional: true
         require : ecbuild
         cmake   : >
-            ENABLE_FIELD_API_TESTS=OFF
-            ENABLE_FIELD_API_FIAT_BUILD=OFF
-            FIELD_API_UTIL_MODULE_PATH=${CMAKE_SOURCE_DIR}/cloudsc-dwarf/src/common/module
+            ENABLE_SINGLE_PRECISION=OFF
+            UTIL_MODULE_PATH=${CMAKE_SOURCE_DIR}/cloudsc-dwarf/src/common/module
 
     - cloudsc-dwarf :
         # The CLOUDSC dwarf project with multiple implementations
@@ -92,7 +91,9 @@ options :
 
     - single-precision :
         help  : Enable single precision build of the dwarf
-        cmake : ENABLE_SINGLE_PRECISION=ON
+        cmake : >
+            ENABLE_SINGLE_PRECISION=ON
+            FIELD_API_DEFINITIONS=SINGLE
 
     - with-gpu :
         help  : Enable GPU kernels
