--- a/bundle.yml
+++ b/bundle.yml
@@ -88,6 +88,11 @@ options :
         cmake: >
             ENABLE_CLOUDSC_OMP_HIP=ON 
 
+    - with-acc-cuda:
+        help: Enable GPU kernel variant based on OMP and HIP
+        cmake: >
+            ENABLE_CLOUDSC_ACC_CUDA=ON
+
     - with-mpi :
         help  : Enable MPI-parallel kernel
         cmake : ENABLE_MPI=ON
