Fortran driver + OpenACC data offload + SYCL kernel (works only with 22.1 and not 22.11 for now)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,5 +16,7 @@ add_subdirectory(cloudsc_cuda)
 add_subdirectory(cloudsc_hip)
 add_subdirectory(cloudsc_omp_hip)
 add_subdirectory(cloudsc_acc_cuda)
+add_subdirectory(cloudsc_acc_sycl)
+add_subdirectory(cloudsc_omp_cuda)
 add_subdirectory(cloudsc_gpu)
 add_subdirectory(cloudsc_loki)
