--- a/bundle.yml
+++ b/bundle.yml
@@ -93,6 +93,16 @@ options :
         cmake: >
             ENABLE_CLOUDSC_ACC_CUDA=ON
 
+    - with-acc-sycl:
+        help: Enable GPU kernel variant based on OMP and HIP
+        cmake: >
+            ENABLE_CLOUDSC_ACC_SYCL=ON
+
+    - with-omp-cuda:
+        help: Enable GPU kernel variant based on OMP and HIP
+        cmake: >
+            ENABLE_CLOUDSC_OMP_CUDA=ON
+
     - with-mpi :
         help  : Enable MPI-parallel kernel
         cmake : ENABLE_MPI=ON
