--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,5 +13,6 @@ add_subdirectory(cloudsc_pyiface)
 add_subdirectory(cloudsc_python)
 add_subdirectory(cloudsc_c)
 add_subdirectory(cloudsc_cuda)
+add_subdirectory(cloudsc_cross)
 add_subdirectory(cloudsc_gpu)
 add_subdirectory(cloudsc_loki)
