Fix CUDA options in bundle

--- a/bundle.yml
+++ b/bundle.yml
@@ -101,10 +101,9 @@ options :
             ENABLE_CLOUDSC_GPU_OMP_SCC_HOIST=ON
 
     - with-cuda :
-        help  : Enable GPU kernel variant based on CUDA-Fortran
+        help  : Enable GPU kernel variants based on CUDA and CUDA-Fortran
         cmake : >
-            ENABLE_FIELD_API_CUDA=ON
-            ENABLE_CLOUDSC_CUDA=ON
+            ENABLE_CUDA=ON
             ENABLE_CLOUDSC_GPU_SCC_CUF=ON
             ENABLE_CLOUDSC_GPU_SCC_CUF_K_CACHING=ON
             BUILD_field_api=ON
@@ -179,10 +178,6 @@ options :
     - cloudsc-c :
         help  : Build the C version of CLOUDSC [ON|OFF]
         cmake : ENABLE_CLOUDSC_C={{value}}
-
-    - cloudsc-cuda :
-        help  : Build the CUDA C version of CLOUDSC [ON|OFF]
-        cmake : ENABLE_CLOUDSC_CUDA={{value}}
 
     - cloudsc-gpu-claw :
         help  : Build the deprecated CLAW-based GPU version CLOUDSC  [ON|OFF]
