--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
           - ''  # Plain build without any options
           - '--with-gpu --with-loki --with-atlas' # Enable Loki, Atlas, and GPU variants
           - '--with-gpu --with-loki --with-atlas --with-mpi' # Enable Loki, Atlas, and GPU variants with MPI
-          - '--single-precision --with-gpu --with-loki --with-mpi' # Enable Loki, and GPU variants with MPI in a single-precision build
+          - '--single-precision --with-gpu --with-loki --with-atlas --with-mpi' # Enable Loki, and GPU variants with MPI in a single-precision build
 
         pyiface_flag: ['']  # Enable the pyiface variant
 
@@ -58,7 +58,7 @@ jobs:
           - arch: nvhpc/21.9
             nvhpc_version: 21.9
             io_library_flag: ''
-            build_flags: '--single-precision --with-gpu --with-loki --with-cuda'
+            build_flags: '--single-precision --with-gpu --with-loki --with-cuda --with-atlas'
             ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-cuda'  # GPU variants don't work on CPU runners, loki-c variant causes SIGFPE
           - arch: nvhpc/21.9
             nvhpc_version: 21.9
@@ -74,7 +74,7 @@ jobs:
           - arch: nvhpc/23.5
             nvhpc_version: 23.5
             io_library_flag: ''
-            build_flags: '--single-precision --with-gpu --with-loki --with-cuda'
+            build_flags: '--single-precision --with-gpu --with-loki --with-cuda --with-atlas'
             ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-loki-sca|-cuda'  # GPU variants don't work on CPU runners, loki-c variant causes SIGFPE
           - arch: nvhpc/23.5
             nvhpc_version: 23.5
