--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,6 +101,7 @@ jobs:
       - name: Free Disk Space (Ubuntu)
         uses: jlumbroso/free-disk-space@main
         if: contains( matrix.arch, 'nvhpc' )
+        continue-on-error: true
         with:
           # this might remove tools that are actually needed,
           # if set to "true" but frees about 6 GB
