--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,8 +53,8 @@ jobs:
           - arch: nvhpc/21.9
             nvhpc_version: 21.9
             io_library_flag: ''
-            build_flags: '--with-gpu --with-loki --with-cuda --with-atlas'
-            ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-cuda'  # GPU variants don't work on CPU runners, loki-c variant causes SIGFPE
+            build_flags: '--with-loki --with-atlas'
+            ctest_exclude_pattern: '-loki-c'  # loki-c variant causes SIGFPE
           - arch: nvhpc/21.9
             nvhpc_version: 21.9
             io_library_flag: ''
@@ -69,8 +69,8 @@ jobs:
           - arch: nvhpc/23.5
             nvhpc_version: 23.5
             io_library_flag: ''
-            build_flags: '--with-gpu --with-loki --with-cuda --with-atlas'
-            ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-loki-sca|-cuda'  # GPU variants don't work on CPU runners, loki-c variant causes SIGFPE
+            build_flags: '--with-loki --with-atlas'
+            ctest_exclude_pattern: '-loki-c'  # loki-c variant causes SIGFPE
           - arch: nvhpc/23.5
             nvhpc_version: 23.5
             io_library_flag: ''
@@ -159,7 +159,7 @@ jobs:
 
       # Run ctest
       - name: Run CTest
-        if: ${{ !contains(matrix.build_flags, '--single-precision') }}
+        if: ${{ !( contains(matrix.build_flags, '--single-precision') || contains(matrix.build_flags, '--with-cuda') || contains(matrix.build_flags, '--with-gpu') ) }}
         working-directory: ./build
         run: |
           source env.sh
