--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,8 +53,8 @@ jobs:
           - arch: nvhpc/21.9
             nvhpc_version: 21.9
             io_library_flag: ''
-            build_flags: '--with-loki --with-atlas'
-            ctest_exclude_pattern: '-loki-c'  # loki-c variant causes SIGFPE
+            build_flags: '--with-gpu --with-loki --with-cuda'
+            ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-cuda-'  # GPU variants don't work on CPU runners, loki-c variant causes SIGFPE
           - arch: nvhpc/21.9
             nvhpc_version: 21.9
             io_library_flag: ''
@@ -69,18 +69,18 @@ jobs:
           - arch: nvhpc/23.5
             nvhpc_version: 23.5
             io_library_flag: ''
-            build_flags: '--with-loki --with-atlas'
-            ctest_exclude_pattern: '-loki-c'  # loki-c variant causes SIGFPE
+            build_flags: '--with-gpu --with-loki --with-cuda'
+            ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-loki-sca|-cuda-'  # GPU variants don't work on CPU runners, loki-c and loki-sca variant causes SIGFPE
           - arch: nvhpc/23.5
             nvhpc_version: 23.5
             io_library_flag: ''
             build_flags: '--single-precision --with-gpu --with-loki --with-cuda --with-atlas'
-            ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-loki-sca|-cuda'  # GPU variants don't work on CPU runners, loki-c variant causes SIGFPE
+            ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-loki-sca|-cuda'  # GPU variants don't work on CPU runners, loki-c and loki-sca variant causes SIGFPE
           - arch: nvhpc/23.5
             nvhpc_version: 23.5
             io_library_flag: '--with-serialbox'
             build_flags: '--with-gpu --with-loki --with-cuda --with-atlas'
-            ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-loki-sca|-cuda'  # GPU variants don't work on CPU runners, loki-c variant causes SIGFPE
+            ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-loki-sca|-cuda'  # GPU variants don't work on CPU runners, loki-c and loki-sca variant causes SIGFPE
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -159,7 +159,7 @@ jobs:
 
       # Run ctest
       - name: Run CTest
-        if: ${{ !( contains(matrix.build_flags, '--single-precision') || contains(matrix.build_flags, '--with-cuda') || contains(matrix.build_flags, '--with-gpu') ) }}
+        if: ${{ !( contains(matrix.build_flags, '--single-precision') || (contains(matrix.build_flags, '--with-cuda') && contains(matrix.build_flags, '--with-atlas')) ) }}
         working-directory: ./build
         run: |
           source env.sh
