--- a/src/cloudsc_loki/cloudsc_cuf_loki.config
+++ b/src/cloudsc_loki/cloudsc_cuf_loki.config
@@ -18,25 +18,27 @@ disable = ['timer%start', 'timer%end', 'timer%thread_start', 'timer%thread_end',
            'performance_timer%thread_log', 'performance_timer%print_performance']
 
 # Define entry point for call-tree transformation
-[[routine]]
-name = 'cuf_cloudsc_driver'
+[routines]
+
+[routines.cuf_cloudsc_driver]
 role = 'driver'
 expand = true
 
-[[dimension]]
-name = 'horizontal'
-size = 'KLON'
-index = 'JL'
-bounds = ['KIDIA', 'KFDIA']
-aliases = ['NPROMA', 'KDIM%KLON']
 
-[[dimension]]
-name = 'vertical'
-size = 'KLEV'
-index = 'JK'
+# Define indices and bounds for array dimensions
+[dimensions]
 
-[[dimension]]
-name = 'block_dim'
-size = 'NGPBLKS'
-index = 'IBL'
-aliases = ['JKGLO']
+[dimensions.horizontal]
+  size = 'KLON'
+  index = 'JL'
+  bounds = ['KIDIA', 'KFDIA']
+  aliases = ['NPROMA', 'KDIM%KLON']
+
+[dimensions.vertical]
+  size = 'KLEV'
+  index = 'JK'
+
+[dimensions.block_dim]
+  size = 'NGPBLKS'
+  index = 'IBL'
+  aliases = ['JKGLO']
