--- a/src/cloudsc_loki/cloudsc_cuf_loki.config
+++ b/src/cloudsc_loki/cloudsc_cuf_loki.config
@@ -1,8 +1,3 @@
-derived_types = ['TECLDP']
-
-[dic2p]
-NLEV = 137
-
 [default]
 # Specifies the behaviour of auto-expanded routines
 role = 'kernel'
@@ -42,3 +37,49 @@ expand = true
   size = 'NGPBLKS'
   index = 'IBL'
   aliases = ['JKGLO']
+
+
+# Define specific transformation settings
+[transformations]
+
+# Loki-SCC-CUF family
+# -----------------------------------------
+# For these, we need to explicitly define the "transformation_type"
+# and provide the names of derived types for extracting device code.
+#
+# Please note that these are intended for eventual refactoring!
+[transformations.cuf-hoist]
+  classname = 'SccCufTransformation'
+  module = 'transformations.scc_cuf'
+[transformations.cuf-hoist.options]
+  transformation_type = 'hoist'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+
+[transformations.cuf-dynamic]
+  classname = 'SccCufTransformation'
+  module = 'transformations.scc_cuf'
+[transformations.cuf-dynamic.options]
+  transformation_type = 'dynamic'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+
+[transformations.cuf-parametrise]
+  classname = 'SccCufTransformation'
+  module = 'transformations.scc_cuf'
+[transformations.cuf-parametrise.options]
+  transformation_type = 'parametrise'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+
+# For SCC-CUF-parametrise we need to define the
+# in-source replacement via "dic2p".
+[transformations.ParametriseTransformation]
+  module = 'loki.transform'
+  options = { dic2p = {NLEV = 137} }
